# arena

./: .envrc  .gitignore  .gitmodules  .prettierignore  Caddyfile  Tiltfile
crates/: Cargo.toml
crates/arenafs/: Cargo.toml  lib.rs
crates/arenafs/src/: error.rs  lib.rs  main.rs
crates/arenafs/src/backend/: mod.rs  postgres.rs
crates/arenafs/src/fs/: cache.rs  mod.rs
crates/arenasql/: Cargo.toml  build.rs
crates/arenasql-cluster/: Cargo.toml
crates/arenasql-cluster/src/: error.rs  lib.rs  main.rs
crates/arenasql-cluster/src/auth/: mod.rs  session.rs
crates/arenasql-cluster/src/extension/: catalog_users.rs  mod.rs
crates/arenasql-cluster/src/init/: mod.rs
crates/arenasql-cluster/src/io/: file.rs  mod.rs  serializer.rs
crates/arenasql-cluster/src/pgwire/: auth.rs  client.rs  datatype.rs  encoder.rs  handler.rs  mod.rs  parser.rs  portal.rs  rowconverter.rs  startup.rs  statement.rs
crates/arenasql-cluster/src/schema/: cluster.rs  mod.rs  user.rs
crates/arenasql-cluster/src/server/: cluster.rs  execution.rs  mod.rs  storage.rs
crates/arenasql-cluster/src/system/: catalog.rs  mod.rs
crates/arenasql/examples/: arenasql.rs
crates/arenasql/src/: error.rs  lib.rs
crates/arenasql/src/ast/: datatype.rs  mod.rs  statement.rs
crates/arenasql/src/df/: mod.rs
crates/arenasql/src/execution/: config.rs  context.rs  execution_plan.rs  filter.rs  locks.rs  mod.rs  modifiedrows.rs  planner.rs  privilege.rs  response.rs  state.rs  transaction.rs
crates/arenasql/src/parser/: mod.rs
crates/arenasql/src/plans/: execution_plan.rs  mod.rs  scalar_udf_execution_plan.rs
crates/arenasql/src/runtime/: mod.rs
crates/arenasql/src/schema/: array.rs  cell.rs  column.rs  constraint.rs  dataframe.rs  datatype.rs  index.rs  mod.rs  row.rs  schema.proto  table.rs
crates/arenasql/src/storage/: factory.rs  kvprovider.rs  kvstore.rs  locks.rs  memory.rs  mod.rs  provider.rs  schema.rs  schema_factory.rs  serde.rs  serializer.rs  transaction.rs
crates/arenasql/src/tests/: drop_table.rs  mod.rs  statement.rs  transaction.rs  unique_column.rs
crates/arenasql/src/utils/: mod.rs  rowconverter.rs
crates/arenasql/src/vectors/: glam.rs  mod.rs  scoring.rs  ultraviolet.rs
crates/cloud/: Cargo.toml  build.rs
crates/cloud/examples/: html_extract_text.rs  pubsub.rs
crates/cloud/src/: extension.rs  identity.rs  jwt.rs  lib.rs  transpile.rs
crates/cloud/src/acl/: access.rs  checker.rs  entity.rs  mod.rs
crates/cloud/src/dqs/: main.js
crates/cloud/src/dqs_runtime/: core.rs  init.js  mod.rs  setup.js
crates/cloud/src/html/: extractor.rs  mod.rs
crates/cloud/src/llm/: embeddings.rs  extension.rs  mod.rs  tokenizer.rs
crates/cloud/src/pdf/: html.rs  mod.rs
crates/cloud/src/pubsub/: event.rs  exchange.rs  extension.rs  filter.rs  mod.rs  node.rs  publisher.rs  subscriber.rs
crates/cloud/src/pyodide/: mod.rs
crates/cloud/src/rowacl/: checker.rs  mod.rs
crates/cloud/src/s3/: mod.rs  types.rs
crates/cloud/src/vectordb/: mod.rs  search.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: config.rs  dirs.rs  dotenv.rs  downloader.rs  env.rs  lib.rs
crates/common/src/arena/: config.rs  mod.rs
crates/common/src/ast/: emitter.rs  mod.rs  types.rs
crates/common/src/axum/: logger.rs
crates/common/src/beam/: mod.rs
crates/common/src/deno/: mod.rs  permissions.rs  secretresource.rs
crates/common/src/fs/: mod.rs
crates/common/src/node/: mod.rs  package.rs  resolver.rs  tsconfig.rs
crates/common/src/query/: args_sanitizer.rs  mod.rs  parser.rs  props_sanitizer.rs
crates/dagger/: Cargo.toml
crates/dagger/src/: exec.rs  format.rs  main.rs  run.rs
crates/dagger/src/app/: bundle.rs  dev.rs  mod.rs  serve.rs  server.rs
crates/dagger/src/cli/: exec.rs  mod.rs  run.rs
crates/dagger/src/server/: dev.rs  mod.rs  s3loader.rs  serve.rs  server.rs
crates/dagger/src/utils/: mod.rs  s3loader.rs
crates/dagger/src/workspace/: bundle.rs  bundler.js  create.rs  dev.rs  mod.rs  new.rs  serve.rs
crates/database/: Cargo.toml
crates/database/src/: main.rs
crates/database/src/sql/: database.rs  mod.rs
crates/dqs/: Cargo.toml  build.rs  main.js  setup.js
crates/dqs/examples/: dqs_boot_latency.rs  dqs_pubsub.rs
crates/dqs/src/: config.rs  dqs_cloud.rs  events.rs  ext.rs  jsruntime.rs  lib.rs  main.rs  moduleloader.rs  runtime.rs  server.js  server.rs  specifier.rs
crates/dqs/src/apps/: extension.rs  mod.rs  setup.js
crates/dqs/src/arena/: app.rs  extension.rs  mainmodule.rs  mod.rs  setup.js  state.rs  (+1 more)
crates/faiss/: .gitignore  Cargo.toml  build.rs
crates/faiss/src/: error.rs  lib.rs  metrics.rs  parameters.rs  search.rs  vector.rs
crates/jsruntime/: Cargo.toml  build.rs  main.js
crates/jsruntime/examples/: add_object_to_v8.rs
crates/jsruntime/js/: package.json
crates/jsruntime/src/: config.rs  lib.rs  main.rs
crates/portal/: Cargo.toml  Taskfile.yaml  build.rs  install.sh  package.json  pnpm-lock.yaml  tauri.conf.json
crates/portal/icons/: icon.icns
crates/portal/src/: cli.rs  config.rs  desktop.rs  lib.rs  main.rs  portal.rs  workspace.rs
crates/python/: Cargo.toml  Dockerfile  build.rs
crates/python/examples/: pyo3.rs
crates/python/src/: grpc.proto  grpc.rs  main.rs  permission.rs  runtime-cluster.rs
crates/registry/: Cargo.toml
crates/registry/src/: main.rs  registry.rs  server.rs  template.rs
crates/runtime/: Cargo.toml  build.rs  main.js
crates/runtime/js/: build.mjs  package.json  pnpm-lock.yaml
crates/runtime/src/: lib.rs  main.rs  permissions.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  server.rs
crates/vectordb/: Cargo.toml
crates/vectordb/benches/: dot_product.rs
crates/vectordb/examples/: blobs.rs
crates/vectordb/src/: lib.rs  python.rs  vectordb_python.rs
crates/vectordb/test/: test_vectordb.py
crates/workspace/: Cargo.toml  build.rs
crates/workspace/src/: arenaconfig.rs  clone.rs  config.rs  lib.rs  load.rs  workspace.rs
crates/workspace/template/: arena.config.toml  arena.config.yaml  entry-server.tsx  package.json  tsconfig.json  workspace.config.toml
(+948 files in other folders)
