[workspace]

members = [
  "common",
  # "workspace",
  # "dqs",
  # "registry",
  # "vectordb",
  "cloud",
  "dagger",
  "faiss",
  "arenasql",
  "arenasql-cluster",
]
resolver = "2"

exclude = ["runtime"]

[workspace.dependencies]
serde_json = { version = "1.0.108", features = [
  "std",
  "preserve_order",
  "indexmap",
] }
tokio = { version = "1.32", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures = "0.3.25"
reqwest = { version = "0.11", features = [
  "json",
  "rustls-tls",
  "stream",
  "gzip",
  "brotli",
  "socks",
] }
anyhow = { version = "1.0.68", features = ["backtrace"] }
ring = "0.16.20"
flate2 = "1.0.24"
tar = "0.4.38"
base64 = "0.20.0"
log = "0.4"
env_logger = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
indexmap = { version = "1.9.2", features = ["serde-1"] }
derivative = "2.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
clap = { version = "4.0.29", features = ["derive"] }
url = "2.3.1"
once_cell = "1.17.1"
chrono = "0.4.23"
smallvec = "1.10.0"
hyper = { version = "0.14.24", features = ["full"] }
axum = "0.6.4"
axum-extra = { version = "0.7.4", features = ["cookie"] }
bytes = "^1.4.0"
http = "0.2.8"
tower = { version = "0.4.13" }
tower-http = { version = "0.3.5", features = ["full"] }
http-body = "0.4.5"
fastwebsockets = { version = "0.4.2", features = ["upgrade"] }
glob = "0.3.1"
pathdiff = "0.2.1"
json-patch = "0.3.0"
itertools = "0.10.5"
digest = { version = "0.10.5", features = ["core-api", "std"] }
rsa = { version = "0.7.0", default-features = false, features = ["std", "pem"] }
hex = "0.4.3"
md4 = "0.10.2"
md-5 = "0.10.5"
sha-1 = "0.10.0"
sha2 = "0.10.6"
ripemd = "0.1.3"
rand = "0.8.5"
jsonwebtoken = "8.3.0"
tokio-postgres = { version = "0.7.7", features = [
  "with-uuid-0_8",
  "with-chrono-0_4",
] }
tokio-rustls = "0.24.0"
postgres = { version = "0.19.4", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
] }
rustls = { version = "0.21.0", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.2"
webpki-roots = "0.23.0"
rustls-native-certs = "0.6.2"
heck = "0.4.1"
uuid = { version = "0.8", features = ["v4"] }
nanoid = "0.4.0"
diesel = { version = "2.0.4", features = ["postgres", "serde_json", "r2d2"] }
nom = "7.1.3"
simdutf8 = "0.1.4"
handlebars = "4.3.7"
dotenvy = "0.15.7"
mime = "0.3.17"
mime_guess = "2.0.4"
rusqlite = { version = "0.29.0", features = ["bundled", "serde_json"] }
colored = "2.0.0"
bstr = { version = "1.6.0", features = ["serde"] }
rmp-serde = "1.1.1"
rkyv = { version = "0.7.42", features = ["bytecheck", "indexmap"] }
dirs = "5.0.1"
num_cpus = "1.16.0"
dashmap = "5.5.3"
signal-hook = "0.3.17"
async-trait = "0.1.74"
getset = "0.1.2"
bincode = "1.3.3"
bitflags = { version = "2.4.1", features = ["serde"] }
derive-new = "0.6.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }

[workspace.dependencies.pgwire]
git = "https://github.com/poudels14/pgwire"
rev = "0eff1605"

[profile.release]
strip = true
debug = 1
codegen-units = 1
# incremental = true
lto = true
