[workspace]

members = [
  "common",
  "dqs",
  "cloud",
  "dagger",
  "arenasql",
  "arenasql-cluster",
  "arenafs",
  "python",
  "portal",
]
resolver = "2"

exclude = ["runtime", "wasmer_test"]

[workspace.dependencies]
serde_json = { version = "1.0.108", features = [
  "std",
  "preserve_order",
  "indexmap",
] }
tokio = { version = "1.32", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures = "0.3.25"
reqwest = { version = "0.11", features = [
  "json",
  "rustls-tls",
  "stream",
  "gzip",
  "brotli",
  "socks",
] }
anyhow = { version = "1.0.68", features = ["backtrace"] }
base64 = "0.20.0"
log = "0.4"
env_logger = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
indexmap = { version = "1.9.2", features = ["serde-1"] }
derivative = "2.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
clap = { version = "4.0.29", features = ["derive"] }
url = "2.3.1"
once_cell = "1.17.1"
chrono = "0.4.23"
hyper = { version = "0.14.26", features = ["full"] }
axum = "0.6"
axum-extra = { version = "0.7.4", features = ["cookie"] }
bytes = "^1.4.0"
http = "0.2.8"
tower = { version = "0.4.13" }
tower-http = { version = "0.3.5", features = ["full"] }
fastwebsockets = { version = "0.4.2", features = ["upgrade"] }
pathdiff = "0.2.1"
itertools = "0.10.5"
rand = "0.8.5"
jsonwebtoken = "8.3.0"
uuid = { version = "0.8", features = ["v4"] }
nanoid = "0.4.0"
nom = "7.1.3"
simdutf8 = "0.1.4"
handlebars = "4.3.7"
dotenvy = "0.15.7"
mime = "0.3.17"
colored = "2.0.0"
dirs = "5.0.1"
num_cpus = "1.16.0"
dashmap = "5.5.3"
signal-hook = "0.3.17"
async-trait = "0.1.74"
getset = "0.1.2"
bincode = "1.3.3"
bitflags = { version = "2.4.1", features = ["serde"] }
derive-new = "0.6.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
sqlx = { version = "0.7.3", features = [
  "postgres",
  "runtime-tokio",
  "time",
  "runtime-tokio-native-tls",
  "chrono",
] }

[profile.release]
strip = true
debug = 1
codegen-units = 1
# incremental = true
lto = true

[profile.release.package.portal]
debug = false
strip = true
codegen-units = 1
opt-level = "z"
