[package]
name = "arenafs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
base64.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
fuser = "0.14.0"
futures.workspace = true
libc = "0.2.153"
nanoid.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "time", "runtime-tokio-native-tls", "chrono"] }
thiserror = "1.0.56"
tokio.workspace = true
tokio-postgres = "0.7.10"
tracing.workspace = true
