[package]
name = "arenasql-cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio-stream.workspace = true
dashmap.workspace = true
uuid.workspace = true
derivative.workspace = true
serde_json.workspace = true
pgwire.workspace = true
clap.workspace = true
getset.workspace = true
sqlparser = { version = "0.39.0", features = ["serde"] }
parking_lot = "0.12.1"
derive_builder = "0.12.0"
arenasql = { path = "../arenasql" }
log = "0.4"
env_logger = "0.10.1"
num_cpus = "1.16.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
