[package]
name = "arenasql-cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio-stream.workspace = true
dashmap.workspace = true
uuid.workspace = true
derivative.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
getset.workspace = true
bincode.workspace = true
anyhow.workspace = true
once_cell.workspace = true
derive-new.workspace = true
rand.workspace = true
itertools.workspace = true
signal-hook.workspace = true
pathdiff.workspace = true
nom.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
tracing = { version = "0.1.37", features = ["release_max_level_debug"] }
sqlparser = { version = "0.39.0", features = ["serde"] }
parking_lot = "0.12.1"
derive_builder = "0.12.0"
arenasql = { path = "../arenasql" }
log = { version = "0.4", features = ["release_max_level_debug"] }
env_logger = "0.10.1"
num_cpus = "1.16.0"
urlencoding = "2.1.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
