[package]
name = "arenasql"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "insert"
harness = false

[dependencies]
futures.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tokio.workspace = true
dashmap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
derivative.workspace = true
once_cell.workspace = true
env_logger.workspace = true
libsql = { version = "0.1.11", features = ["core"] }
libsql-sys = "0.2.14"
datafusion = { version = "32.0.0", features = [] }
sqlparser = { version = "0.38.0", features = ["serde"] }
rocksdb = { version = "0.21.0", default-features = false, features = [
  "lz4",
  "multi-threaded-cf",
] }
bincode = "1.3.3"
async-trait = "0.1.74"
itertools = "0.12.0"
bytes = "1.5.0"
simdutf8.workspace = true


[dev-dependencies]
criterion.workspace = true
