[package]
name = "arenasql"
version = "0.1.0"
edition = "2021"

[features]
glam-dot = []

[dependencies]
futures.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tokio.workspace = true
dashmap.workspace = true
tracing = { version = "0.1.37", features = ["release_max_level_debug"] }
tracing-subscriber.workspace = true
tracing-tree.workspace = true
derivative.workspace = true
once_cell.workspace = true
async-trait.workspace = true
simdutf8.workspace = true
rand.workspace = true
getset.workspace = true
derive-new.workspace = true
bincode.workspace = true
bitflags.workspace = true
datafusion = { package = "datafusion", path = "../../datafusion/datafusion/core" }
sqlparser = { version = "0.39.0", features = ["serde", "visitor"] }
rocksdb = { version = "0.22.0", default-features = false, features = [
  "lz4",
  "multi-threaded-cf",
  "jemalloc",
] }
postgres-types = "0.2.6"
strum = "0.25"
strum_macros = "0.25"
itertools = "0.12.0"
bytes = "1.5.0"
Inflector = "0.11.4"
derive_builder = "0.12.0"
tempdir = "0.3.7"
parking_lot = "0.12.1"
glam = "0.24.2"
ultraviolet = "0.9.2"
ordered-float = "4.2.0"
chrono = "0.4.31"
regex = "1.10.2"
prost = "0.12.3"

[dependencies.pgwire]
path = "../../pgwire"

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
prost-build = "0.12.3"
