[package]
name = "cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
v8.workspace = true
tracing.workspace = true
deno_core.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
http.workspace = true
dirs.workspace = true
bstr.workspace = true
simdutf8.workspace = true
indexmap.workspace = true
base64.workspace = true
pdfium-render = { version = "0.8.8", features = ["thread_safe"] }
html-escape = "0.2.13"
html5ever = "0.26.0"
tokenizers = { version = "0.13.3" }
common = { path = "../common", features = ["data_query"] }
jsruntime = { path = "../jsruntime" }
vectordb = { path = "../vectordb", package = "vectordb" }
