[package]
name = "cloud"
version = "0.1.0"
edition = "2021"

[features]
default = ["include-in-binary", "include-pyodide-archive"]
# If enabled, the source code of the modules will be included in the binary
# turn off the feature if using snapshot with modules
include-in-binary = []
include-pyodide-archive = []

[dependencies]
anyhow.workspace = true
url.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
http.workspace = true
dirs.workspace = true
simdutf8.workspace = true
indexmap.workspace = true
base64.workspace = true
derivative.workspace = true
tokio.workspace = true
hyper.workspace = true
fastwebsockets.workspace = true
uuid.workspace = true
clap.workspace = true
bytes.workspace = true
itertools.workspace = true
futures.workspace = true
pdfium-render = { version = "0.8.8", features = ["thread_safe"] }
html-escape = "0.2.13"
html5ever = "0.26.0"
tokenizers = { version = "0.15.1", features = ["http"] }
candle-core = "0.3.2"
candle-nn = "0.3.2"
candle-transformers = "0.3.2"
hf-hub = "0.3.2"
aws-region = { version = "0.25.4", features = ["serde"] }
rust-s3 = "0.33.0"
tar = "0.4.40"
tempfile = "3.8.1"
sqlparser = { version = "0.39.0", features = ["serde", "visitor"] }

common = { path = "../common", features = ["data_query"] }
runtime = { path = "../runtime" }

deno_core = "=0.238.0"
deno_webidl = "=0.128.0"
deno_console = "=0.128.0"
deno_url = "=0.128.0"
deno_fetch = "=0.153.0"
deno_web = "=0.159.0"
deno_tls = "=0.115.0"
deno_unsync = "0.3.1"
deno_ast = "0.31.6"


[build-dependencies]
tar = "0.4.40"

common = { path = "../common", features = [] }
runtime = { path = "../runtime", features = ["include-in-binary"] }
futures.workspace = true
url.workspace = true
anyhow.workspace = true
deno_core = "=0.238.0"
deno_webidl = "=0.128.0"
deno_console = "=0.128.0"
deno_url = "=0.128.0"
deno_fetch = "=0.153.0"
deno_web = "=0.159.0"
deno_tls = "=0.115.0"
deno_unsync = "0.3.1"
deno_ast = "0.31.6"
