[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
ast = []
dotenv = []
all = ["ast", "dotenv"]

[dependencies]
anyhow.workspace = true
derivative.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
url.workspace = true
tokio.workspace = true
http.workspace = true
axum.workspace = true
tracing.workspace = true
uuid.workspace = true
once_cell.workspace = true
simdutf8.workspace = true
dotenvy.workspace = true
