[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
ast = []
dotenv = []
data_query = ["ast"]
all = ["ast", "dotenv", "data_query"]

[dependencies]
anyhow.workspace = true
derivative.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
url.workspace = true
tokio.workspace = true
http.workspace = true
axum.workspace = true
tracing.workspace = true
uuid.workspace = true
once_cell.workspace = true
simdutf8.workspace = true
dotenvy.workspace = true

swc_atoms = "=0.6"
swc_common = "=0.33"
swc_ecma_visit = "=0.96"
swc_ecma_ast = "=0.110"
swc_ecma_parser = "=0.141"
swc_ecma_transforms_base = "=0.134"
swc_ecma_codegen = "=0.146"
deno_ast = "0.31.6"
