[package]
name = "dagger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
env_logger.workspace = true
indexmap.workspace = true
chrono.workspace = true
url.workspace = true
deno_core.workspace = true
colored = "2.0.0"
axum.workspace = true
jsruntime = { path = "../jsruntime" }
common = { path = "../common" }
arena_workspace = { path = "../workspace" }
arena_server = { path = "../server" }
