[package]
name = "dagger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
env_logger.workspace = true
indexmap.workspace = true
chrono.workspace = true
url.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
colored.workspace = true
aws-region = { version = "0.25.4", features = ["serde"] }
rust-s3 = "0.33.0"
runtime = { path = "../runtime" }
common = { path = "../common", features = ["dotenv"] }
cloud = { path = "../cloud" }
dqs = { path = "../dqs" }
axum.workspace = true
tower.workspace = true
