[package]
name = "arena-database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tokio.workspace = true
axum.workspace = true
dashmap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
libsql = { version = "0.1.11", features = ["core"] }
libsql-sys = "0.2.14"

[build-dependencies]
tonic-build = "0.10"
