[package]
name = "dqs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
derivative.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
tokio.workspace = true
url.workspace = true
nom.workspace = true
hyper.workspace = true
bytes.workspace = true
http.workspace = true
diesel.workspace = true
handlebars.workspace = true
uuid.workspace = true
once_cell.workspace = true
common = { path = "../common" }
jsruntime = { path = "../jsruntime" }

deno_core.workspace = true
deno_webidl.workspace = true
deno_console.workspace = true
deno_url.workspace = true
deno_web.workspace = true
deno_fetch.workspace = true


[build-dependencies]
common = { path = "../common", features = ["fs_rerun_if_changed"] }
futures.workspace = true
url.workspace = true
deno_core.workspace = true
deno_console.workspace = true
deno_url.workspace = true
deno_fetch.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
deno_crypto.workspace = true
