[package]
name = "dqs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dqs_cloud"
path = "src/dqs_cloud.rs"

[[bin]]
name = "dqs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
derivative.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
url.workspace = true
nom.workspace = true
hyper.workspace = true
bytes.workspace = true
http.workspace = true
diesel.workspace = true
handlebars.workspace = true
uuid.workspace = true
once_cell.workspace = true
tower.workspace = true
tower-http.workspace = true
axum.workspace = true
axum-extra.workspace = true
jsonwebtoken.workspace = true
common = { path = "../common" }
jsruntime = { path = "../jsruntime" }
cloud = { path = "../cloud" }

deno_core.workspace = true
deno_webidl.workspace = true
deno_console.workspace = true
deno_url.workspace = true
deno_web.workspace = true
deno_fetch.workspace = true


[build-dependencies]
common = { path = "../common", features = ["fs_rerun_if_changed"] }
futures.workspace = true
url.workspace = true
deno_core.workspace = true
deno_console.workspace = true
deno_url.workspace = true
deno_fetch.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
