[package]
name = "dqs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app-cluster"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
derivative.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
url.workspace = true
nom.workspace = true
hyper.workspace = true
bytes.workspace = true
http.workspace = true
diesel.workspace = true
handlebars.workspace = true
uuid.workspace = true
once_cell.workspace = true
tower.workspace = true
tower-http.workspace = true
axum.workspace = true
axum-extra.workspace = true
mime.workspace = true
fastwebsockets.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
clap.workspace = true
indexmap.workspace = true
simdutf8.workspace = true
colored.workspace = true
nanoid.workspace = true
dashmap.workspace = true
num_cpus.workspace = true
signal-hook.workspace = true
async-trait.workspace = true

deno_core = "=0.238.0"
deno_webidl = "=0.128.0"
deno_console = "=0.128.0"
deno_url = "=0.128.0"
deno_fetch = "=0.153.0"
deno_web = "=0.159.0"
deno_tls = "=0.115.0"
deno_unsync = "0.3.1"

common = { path = "../common", features = ["dotenv"] }
runtime = { path = "../runtime", features = [], default-features = false }
cloud = { path = "../cloud", features = [], default-features = false }
parking_lot = "0.12.1"

[build-dependencies]
common = { path = "../common", features = [] }
runtime = { path = "../runtime", features = ["include-in-binary"] }
cloud = { path = "../cloud", features = [] }
futures.workspace = true
url.workspace = true
anyhow.workspace = true
deno_core = "=0.238.0"
deno_webidl = "=0.128.0"
deno_console = "=0.128.0"
deno_url = "=0.128.0"
deno_fetch = "=0.153.0"
deno_web = "=0.159.0"
deno_tls = "=0.115.0"
deno_unsync = "0.3.1"
deno_ast = "0.31.6"
