[package]
name = "jsruntime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
url.workspace = true
smallvec.workspace = true
indexmap.workspace = true
derivative.workspace = true
once_cell.workspace = true
tracing.workspace = true
toml.workspace = true
pathdiff.workspace = true
itertools.workspace = true
digest.workspace = true
rsa.workspace = true
hex = "0.4.3"
md4 = "0.10.2"
md-5 = "0.10.5"
sha-1 = "0.10.0"
sha2 = "0.10.6"
ripemd = "0.1.3"
common = { path = "../common" }

deno_core.workspace = true
deno_console.workspace = true
deno_url.workspace = true
deno_fetch.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
deno_crypto.workspace = true
deno_ast.workspace = true

swc_ecma_visit.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_atoms.workspace = true

[build-dependencies]
url.workspace = true
deno_core.workspace = true
deno_console.workspace = true
deno_url.workspace = true
deno_fetch.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
deno_crypto.workspace = true

[dev-dependencies]
criterion.workspace = true
