[package]
name = "jsruntime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
url.workspace = true
smallvec.workspace = true
indexmap.workspace = true
derivative.workspace = true
once_cell.workspace = true
tracing.workspace = true
toml.workspace = true
pathdiff.workspace = true
itertools.workspace = true
digest.workspace = true
rsa.workspace = true
hex.workspace = true
md4.workspace = true
md-5.workspace = true
sha-1.workspace = true
sha2.workspace = true
ripemd.workspace = true
common = { path = "../common" }

deno_core.workspace = true
deno_console.workspace = true
deno_url.workspace = true
deno_fetch.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
deno_crypto.workspace = true
deno_ast.workspace = true

swc_ecma_visit.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_atoms.workspace = true

[build-dependencies]
common = { path = "../common" }
futures.workspace = true
url.workspace = true
deno_core.workspace = true
deno_console.workspace = true
deno_url.workspace = true
deno_fetch.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
deno_crypto.workspace = true

[dev-dependencies]
criterion.workspace = true
