[package]
name = "jsruntime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
url.workspace = true
smallvec.workspace = true
derivative.workspace = true
tracing.workspace = true
http-body.workspace = true
http.workspace = true
bytes.workspace = true
simdutf8.workspace = true
reqwest.workspace = true
common = { path = "../common", features = ["all"] }

deno_core.workspace = true
deno_console.workspace = true
deno_url.workspace = true
deno_fetch.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
deno_ast.workspace = true
swc_ecma_visit.workspace = true

[build-dependencies]
common = { path = "../common", features = ["all"] }
futures.workspace = true
url.workspace = true
deno_core.workspace = true
deno_console.workspace = true
deno_url.workspace = true
deno_fetch.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true

[dev-dependencies]
criterion.workspace = true
