[package]
name = "portal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
colored.workspace = true
tracing-tree = "0.3.0"
tracing-subscriber = "0.3.18"
arenasql = { path = "../arenasql" }
arenasql-cluster = { path = "../arenasql-cluster" }
runtime = { path = "../runtime" }
common = { path = "../common", features = ["dotenv"] }
cloud = { path = "../cloud" }
dqs = { path = "../dqs" }
jsonwebtoken.workspace = true
serde_json.workspace = true
tower.workspace = true
url.workspace = true
directories = "5.0.1"
signal-hook = "0.3.17"
num_cpus.workspace = true
nanoid.workspace = true
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
toml = "0.8.10"
serde.workspace = true
rayon = "1.9.0"
