[package]
name = "portal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
colored.workspace = true
jsonwebtoken.workspace = true
serde_json.workspace = true
tower.workspace = true
url.workspace = true
num_cpus.workspace = true
nanoid.workspace = true
serde.workspace = true
tracing-tree = "0.3.0"
tracing-subscriber = "0.3.18"
directories = "5.0.1"
signal-hook = "0.3.17"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
toml = "0.8.10"
rayon = "1.9.0"
tar = "0.4.40"

arenasql = { path = "../arenasql" }
arenasql-cluster = { path = "../arenasql-cluster" }
runtime = { path = "../runtime" }
common = { path = "../common", features = ["dotenv"] }
cloud = { path = "../cloud" }
dqs = { path = "../dqs" }
tower-http = { version = "0.3.5", features = ["fs"] }
bytes.workspace = true
hyper.workspace = true
async-trait = "0.1.77"
mime_guess = "2.0.4"

[build-dependencies]
pathdiff.workspace = true
tar = "0.4.40"
walkdir = "2.5.0"
