[package]
name = "portal"
version = "0.1.11"
edition = "2021"

# [[bin]]
# name = "portal"
# path = "src/main.rs"

# [[bin]]
# name = "portal-cli"
# path = "src/cli.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
tokio.workspace = true
tracing = { workspace = true, features = ["release_max_level_error"] }
colored.workspace = true
jsonwebtoken.workspace = true
serde_json.workspace = true
tower.workspace = true
url.workspace = true
num_cpus.workspace = true
nanoid.workspace = true
serde.workspace = true
bytes.workspace = true
hyper.workspace = true
futures.workspace = true
reqwest.workspace = true
tracing-tree = "0.3.0"
tracing-subscriber = "0.3.18"
directories = "5.0.1"
signal-hook = "0.3.17"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
toml = "0.8.10"
rayon = "1.9.0"
tar = "0.4.40"

arenasql = { path = "../arenasql" }
arenasql-cluster = { path = "../arenasql-cluster" }
runtime = { path = "../runtime", features = ["disable-http-log"] }
common = { path = "../common", features = ["dotenv"] }
cloud = { path = "../cloud", features = ["disable-auth"] }
dqs = { path = "../dqs", features = ["disable-auth", "desktop"] }
tower-http = { version = "0.3.5", features = ["fs"] }
async-trait = "0.1.77"
mime_guess = "2.0.4"
ring = "0.16.20"
tauri = { version = "1.6.1", features = ["default", "updater"] }
napi = "2"
napi-derive = "2"
http-body = "1.0.0"
matchit = "0.8.0"
once_cell.workspace = true
tracing-appender = "0.2.3"
sentry = { version = "0.32.3", features = ["anyhow"] }

[build-dependencies]
pathdiff.workspace = true
nanoid.workspace = true
tar = "0.4.40"
walkdir = "2.5.0"
ring = "0.16.20"
tauri-build = { version = "1.5.1", features = [] }
napi-build = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
