[package]
name = "python-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "python-runtime"
path = "src/main.rs"

[[bin]]
name = "python-cluster"
path = "src/runtime-cluster.rs"

[lib]
name = "permission"
path = "./src/permission.rs"
crate-type = ["staticlib"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
hyper = { version = "1.1", features = ["full"] }
nanoid.workspace = true
hyper-util = { version = "0.1.3", features = ["tokio"] }
hyperlocal = "0.8.0"
libc = "0.2.153"
pyo3 = "0.20.2"
rayon = "1.8.1"
tonic = "0.11.0"
dashmap = "5.5.3"
tonic-build = "0.11.0"
arenafs = { version = "0.1.0", path = "../arenafs" }
async-trait = "0.1.77"
tower.workspace = true
tokio-stream = { version = "0.1.14", features = ["net"] }
once_cell.workspace = true
derivative.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
tracing.workspace = true
prost = "0.12.3"
futures.workspace = true

[build-dependencies]
tonic-build = "0.11.0"
