[package]
name = "registry"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
anyhow.workspace = true
http.workspace = true
tower-http.workspace = true
axum.workspace = true
nom.workspace = true
clap.workspace = true
futures.workspace = true
bytes.workspace = true
mime.workspace = true
mime_guess.workspace = true
colored.workspace = true
common = { path = "../common", features = ["dotenv"] }
