[package]
name = "runtime"
version = "0.2.0"
edition = "2021"

[features]
default = ["build-tools", "include-in-binary"]
build-tools = []
# If enabled, the source code of the modules will be included in the binary
# turn off the feature if using snapshot with modules
include-in-binary = []
fs_rerun_if_changed = []

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = [
  "std",
  "preserve_order",
  "indexmap",
] }
derivative = "2.2"
indexmap = { version = "1.9.2", features = ["serde-1"] }
url = "2.3"
tokio = { version = "1.32", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
http = "0.2.8"
http-body = "0.4.5"
hyper = { version = "0.14.24", features = ["full"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.3.5", features = ["full"] }
axum = "0.6.4"
fastwebsockets = { version = "0.4.2", features = ["upgrade"] }
tracing = "0.1.37"
futures = "0.3.25"
bytes = "^1.4.0"
once_cell = "1.17.1"
tokio-postgres = { version = "0.7.10", features = [
  "with-serde_json-1",
  "with-uuid-0_8",
  "with-chrono-0_4",
] }
postgres = { version = "0.19.7", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
] }
openssl = "0.10.62"
postgres-openssl = "0.5.0"
reqwest = { version = "0.11", features = [
  "json",
  "rustls-tls",
  "stream",
  "gzip",
  "brotli",
  "socks",
] }
heck = "0.4.1"
uuid = { version = "0.8", features = ["v4"] }
simdutf8 = "0.1.4"
dotenvy = "0.15.7"
mime = "0.3.17"
ring = "0.16.20"
chrono = "0.4.23"
rusqlite = { version = "0.29.0", features = ["bundled", "serde_json"] }
base64 = "0.20.0"
digest = { version = "0.10.5", features = ["core-api", "std"] }
rsa = { version = "0.7.0", default-features = false, features = ["std", "pem"] }
hex = "0.4.3"
md4 = "0.10.2"
md-5 = "0.10.5"
sha-1 = "0.10.0"
sha2 = "0.10.6"
ripemd = "0.1.3"
rand = "0.8.5"
derive-new = "0.6.0"
derive_builder = "0.12.0"
async-trait = "0.1.74"
getset = "0.1.2"
jsonwebtoken = "8.3.0"
pathdiff = "0.2.1"
tempfile = "3.8.1"

swc_atoms = "=0.6"
swc_common = "=0.33"
swc_ecma_visit = "=0.96"
swc_ecma_ast = "=0.110"
swc_ecma_parser = "=0.141"
swc_ecma_transforms_base = "=0.134"
swc_ecma_codegen = "=0.146"

deno_core = "=0.238.0"
deno_webidl = "=0.128.0"
deno_console = "=0.128.0"
deno_url = "=0.128.0"
deno_fetch = "=0.153.0"
deno_web = "=0.159.0"
deno_tls = "=0.115.0"
deno_unsync = "0.3.1"
deno_ast = { version = "=0.31.6", features = ["transpiling", "cjs"] }


[build-dependencies]
url = "2.3"
futures = "0.3.25"
anyhow = "1.0"
deno_core = "=0.238.0"
deno_webidl = "=0.128.0"
deno_console = "=0.128.0"
deno_url = "=0.128.0"
deno_fetch = "=0.153.0"
deno_web = "=0.159.0"
deno_tls = "=0.115.0"
deno_ast = { version = "=0.31.6", features = ["transpiling"] }
